Added my project

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -239,6 +239,17 @@ Aytgancha, bu erda men taxminan 15 daqiqa oldin tugatdim, va u hatto bo'shashish
     </div>
     <script src="./2bundle-lnrqtjxm.js"></script>
     <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a521ca7fb0044738ad6056ecbed368ef"}'></script><!-- End Cloudflare Web Analytics -->
+    <!-- Hotjar Tracking Code for https://uuroproz.pages.dev -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3711735,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   </body>
 </html>
   
