--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,6 +2,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T7PV4KS0FG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T7PV4KS0FG');
+</script>
     <title></title>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1" >
